<resources>
    <string name="app_name">PurchaseList</string>

    <!--ELEMENTS TEXT-->
    <string name="et_username">username</string>
    <string name="et_password">password</string>
    <string name="et_repeat">repeat password</string>
    <string name="et_email">email</string>
    <string name="bt_login">login</string>
    <string name="bt_register">register</string>
    <string name="tv_forgot_password">Forgot your password? - Tap here!</string>
    <string name="tv_login">LOGIN</string>
    <string name="tv_register">Register in a few seconds!</string>

    <!--BUTTONS-->
    <string name="bt_gotit_register">I Got IT! :)</string>

    <!--MESSAGES-->

    <!--ERROR MESSAGES-->
    <string name="em_username_correct">4 chars at lest and no special chars</string>
    <string name="em_username_used">This username is already in use</string>
    <string name="em_email_correct">this is not a valid email</string>
    <string name="em_email_used">this email is already in use</string>
    <string name="em_password_correct">8 chars and a number at lest</string>
    <string name="em_password_matches">Passwords doesn\'t match</string>

</resources>
