<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jnoma.purchaselist.controllers.Register"
    android:background="@color/colorPrimaryLight">

    <LinearLayout
        android:layout_width="267dp"
        android:layout_height="277dp"
        android:orientation="vertical"
        android:padding="@dimen/x16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/whiteColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_editor_absoluteY="30dp"
        tools:layout_editor_absoluteX="66dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_register"
            android:gravity="center"
            android:textSize="@dimen/x16sp"
            android:layout_marginBottom="@dimen/x16dp"/>

        <EditText
            android:id="@+id/et_name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_username"/>

        <EditText
            android:id="@+id/et_email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_email"/>

        <EditText
            android:id="@+id/et_passord_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_password"/>

        <EditText
            android:id="@+id/et_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/et_repeat"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bt_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/bt_gotit_register"
                android:backgroundTint="@color/colorAccent"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
